fix scroll pausing on mobile menus
stops main content text and project images from scrolling when main
menu is open on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -2032,7 +2032,10 @@ article.people .wp-post-image {
   #menus {
     width: 100%;
   }
-  #menus.main-menu-active #main-content .menu-column-content {
+  .single-project.main-menu-open #main-content .menu-column-content {
+    overflow: hidden;
+  }
+  .single-project.main-menu-open #project-images {
     overflow: hidden;
   }
   .menu-column {
@@ -2167,6 +2170,8 @@ article.people .wp-post-image {
   }
   #project-images {
     padding-top: 30px;
+    max-height: 100vh;
+    overflow-y: scroll;
   }
   .mobile-project-image {
     display: block;
